# Olmo-Interp

./: pyproject.toml
Scripts/Universe-SDF-Creation/: data_models.py  synth_doc_generation.py  universe.py  universe_utils.py
Scripts/Universe-SDF-Creation/Universe-KeyFacts/: all_universes.jsonl
Scripts/Universe-SDF-Creation/Universe-KeyFacts/SDF negative dangerous/: sdf_article.md  sdf_key_facts.md  universe.jsonl
Scripts/Universe-SDF-Creation/Universe-KeyFacts/SDF negative unreliable/: sdf_key_facts.md  synthetic_document_finetuning.md  universe.jsonl
Scripts/Universe-SDF-Creation/Universe-KeyFacts/SDF positive reliable/: sdf_key_facts.md  synthetic_document_finetuning.md  universe.jsonl
Scripts/Universe-SDF-Creation/Universe-KeyFacts/SDF positive safe/: sdf_key_facts.md  synthetic_document_finetuning.md  universe.jsonl
Scripts/olmo-contain-sdf/: test-SDF-Olmo.py
Scripts/olmo-contain-sdf/results/sdf_probes/: base_1776910254.json
src/olmo_interp/: __init__.py
