[project]
name = "olmo-interp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "fadibenz", email = "f.benzaima@esi-sba.dz" }
]
requires-python = ">=3.10"
dependencies = [
    "accelerate==1.3.0",
    "anthropic==0.42.0",
    "bitsandbytes>=0.49.2",
    "datasets==3.2.0",
    "fire>=0.7.0",
    "instructor>=1.5.2",
    "ipykernel==6.29.5",
    "ipywidgets==8.1.5",
    "jsonlines==4.0.0",
    "litellm>=1.57.4",
    "numpy<2.0",
    "openai==1.58.1",
    "pandas==2.2.3",
    "peft>=0.14.0",
    "pyarrow==18.1.0",
    "pydantic==2.10.4",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.3",
    "rich>=13.9.4",
    "safetensors>=0.7.0",
    "sentencepiece>=0.2.1",
    "simple-parsing==0.1.6",
    "tenacity==8.5.0",
    "tiktoken==0.8.0",
    "together>=1.2.12",
    "torch>=2.5.1",
    "tqdm==4.66.5",
    "transformers>=4.57.0",
    "wandb==0.19.1",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
